force-app/main/default/objects/Product_Related_Activity__dlm/fields/rel_1721665215378_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1721665215378_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product_Related_Activity_Related_Act_rel</label>
    <referenceTo>ssot__GoodsProduct__dlm</referenceTo>
    <relationshipLabel>Product_Related_Activity_Related_Act_rel</relationshipLabel>
    <relationshipName>rel_1721665215378_end</relationshipName>
    <type>Lookup</type>
</CustomField>