force-app/main/default/objects/Product_Related_Activity__dlm/fields/Related_Activity__c.field-meta.xml
<CustomField>
    <fullName>Related_Activity__c</fullName>
    <label>Related Activity Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Related Activity Id</masterLabel>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>